bk_ida/gccida/g0/append_random_chars
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/append_random_chars/src/tree.c:5007:7: error: use of undeclared identifier 'value_2'
if ( !value_2 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/append_random_chars/src/tree.c:5010:1: error: use of undeclared identifier 'value_2'
value_2 = st.st_ino ^ st.st_dev ^ st.st_mtim.tv_sec; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/append_random_chars/src/tree.c:5012:1: error: use of undeclared identifier 'value_2'
value_2 = 1LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/append_random_chars/src/tree.c:5015:5: error: use of undeclared identifier 'value_2'
v = value_2; 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/append_random_chars/src/tree.c:5016:24: error: use of undeclared identifier 'value_2'
*templatea = letters_1[value_2 % 0x3E]; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/append_random_chars/src/tree.c:5016:14: error: use of undeclared identifier 'letters_1'
*templatea = letters_1[value_2 % 0x3E]; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/append_random_chars/src/tree.c:5018:16: error: use of undeclared identifier 'letters_1'
templatea[1] = letters_1[v % 0x3E]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/append_random_chars/src/tree.c:5020:16: error: use of undeclared identifier 'letters_1'
templatea[2] = letters_1[v % 0x3E]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/append_random_chars/src/tree.c:5022:16: error: use of undeclared identifier 'letters_1'
templatea[3] = letters_1[v % 0x3E]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/append_random_chars/src/tree.c:5024:16: error: use of undeclared identifier 'letters_1'
templatea[4] = letters_1[v % 0x3E]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/append_random_chars/src/tree.c:5026:16: error: use of undeclared identifier 'letters_1'
templatea[5] = letters_1[v % 0x3E]; 
               ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/append_random_chars/src/obj/tree.o] Error 1
